Setting new place for social button to prevent overlap with contrib tag

--- a/css/common_styles.scss
+++ b/css/common_styles.scss
@@ -394,7 +394,7 @@ h1:before {
 .page-social{
 	position: absolute;
 	bottom: 10px;
-	right: 0;
+	left: 0;
 }
 
 .page-social-bottom{
